fix(tokens): add dark theme blend mode token (#5992)

--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -11,7 +11,6 @@
   --#{$button}--FontSize: var(--pf-t--global--font--size--body--md);
   --#{$button}--BackgroundColor: transparent;
   --#{$button}--BorderRadius: var(--pf-t--global--border--radius--pill);
-  --#{$button}--after--BorderRadius: var(--pf-t--global--border--radius--pill);
   --#{$button}--after--BorderColor: transparent;
   --#{$button}--after--BorderWidth: var(--pf-t--global--border--width--button--default);
 
@@ -137,8 +136,13 @@
 
   // Plain btn
   --#{$button}--m-plain--BackgroundColor: var(--pf-t--global--background--color--action--plain--default);
+  --#{$button}--m-plain--BorderRadius: var(--pf-t--global--border--radius--small);
+  --#{$button}--m-plain--PaddingTop: var(--pf-t--global--spacer--sm);
+  --#{$button}--m-plain--PaddingRight: var(--pf-t--global--spacer--sm);
+  --#{$button}--m-plain--PaddingBottom: var(--pf-t--global--spacer--sm);
+  --#{$button}--m-plain--PaddingLeft: var(--pf-t--global--spacer--sm);
   --#{$button}--m-plain--Color: var(--pf-t--global--icon--color--regular);
-  --#{$button}--m-plain--hover--BackgroundColor: --pf-t--global--background--color--action--plain--hover;
+  --#{$button}--m-plain--hover--BackgroundColor: var(--pf-t--global--background--color--action--plain--hover);
   --#{$button}--m-plain--hover--Color: var(--pf-t--global--text--color--regular);
   --#{$button}--m-plain--focus--BackgroundColor: transparent;
   --#{$button}--m-plain--focus--Color: var(--pf-t--global--text--color--regular);
@@ -147,13 +151,10 @@
   --#{$button}--m-plain--disabled--Color: var(--pf-t--global--icon--color--disabled);
   --#{$button}--m-plain--disabled--BackgroundColor: transparent;
 
-  // TODO this token needs to be added to figma
-  --pf-t--global--background--color--action--plain--hover--blend: var(--pf-t--global--mix-blend-mode--100);
-
   // Control Button
   --#{$button}--m-control--BackgroundColor: var(--pf-t--global--background--color--control--default);
   --#{$button}--m-control--Color: var(--pf-t--global--text--color--subtle);
-  --#{$button}--m-control--BorderRadius: 0;
+  --#{$button}--m-control--BorderRadius: var(--pf-t--global--border--radius--small);
   --#{$button}--m-control--after--BorderWidth: var(--pf-t--global--border--width--control--default);
   --#{$button}--m-control--after--BorderTopColor: var(--pf-t--global--border--color--default);
   --#{$button}--m-control--after--BorderRightColor: var(--pf-t--global--border--color--default);
@@ -239,7 +240,7 @@
     content: "";
     border: var(--#{$button}--after--BorderWidth) solid;
     border-color: var(--#{$button}--after--BorderColor);
-    border-radius: var(--#{$button}--after--BorderRadius);
+    border-radius: var(--#{$button}--BorderRadius);
   }
 
   &:hover {
