chore(masthead): added tokens

--- a/src/patternfly/components/Masthead/masthead-brand.hbs
+++ b/src/patternfly/components/Masthead/masthead-brand.hbs
@@ -12,6 +12,6 @@
   {{#if @partial-block}}
     {{> @partial-block}}
   {{else}}
-    {{> brand brand--attribute='src="/assets/images/PF-Masthead-Logo.svg" alt="PatternFly logo"'}}
+    {{> masthead-logo}}
   {{/if}}
 </{{#if masthead-brand--type}}{{masthead-brand--type}}{{else}}a{{/if}}>
