--- a/src/patternfly/components/Alert/alert-group.scss
+++ b/src/patternfly/components/Alert/alert-group.scss
@@ -3,29 +3,31 @@
 // Tabs
 .#{$alert-group} {
   // Alert group variables
-  --#{$alert-group}__item--MarginTop: var(--#{$pf-global}--spacer--sm);
+  --#{$alert-group}__item--MarginTop: var(--pf-t--global--spacer--md);
 
   // Toast variables
-  --#{$alert-group}--m-toast--Top: var(--#{$pf-global}--spacer--2xl);
-  --#{$alert-group}--m-toast--Right: var(--#{$pf-global}--spacer--xl);
+  --#{$alert-group}--m-toast--Top: var(--pf-t--global--spacer--2xl);
+  --#{$alert-group}--m-toast--Right: var(--pf-t--global--spacer--xl);
   --#{$alert-group}--m-toast--MaxWidth: #{pf-size-prem(600px)};
   --#{$alert-group}--m-toast--ZIndex: var(--#{$pf-global}--ZIndex--2xl);
 
   // Overflow button
   --#{$alert-group}__overflow-button--BorderWidth: 0;
-  --#{$alert-group}__overflow-button--PaddingTop: var(--#{$pf-global}--spacer--lg);
-  --#{$alert-group}__overflow-button--PaddingRight: var(--#{$pf-global}--spacer--md);
-  --#{$alert-group}__overflow-button--PaddingBottom: var(--#{$pf-global}--spacer--lg);
-  --#{$alert-group}__overflow-button--PaddingLeft: var(--#{$pf-global}--spacer--md);
-  --#{$alert-group}__overflow-button--Color: var(--#{$pf-global}--link--Color);
-  --#{$alert-group}__overflow-button--BoxShadow: var(--#{$pf-global}--BoxShadow--lg);
-  --#{$alert-group}__overflow-button--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
-  --#{$alert-group}__overflow-button--hover--Color: var(--#{$pf-global}--link--Color--hover);
-  --#{$alert-group}__overflow-button--hover--BoxShadow: var(--#{$pf-global}--BoxShadow--lg), var(--#{$pf-global}--BoxShadow--lg-bottom);
-  --#{$alert-group}__overflow-button--focus--Color: var(--#{$pf-global}--link--Color--hover);
-  --#{$alert-group}__overflow-button--focus--BoxShadow: var(--#{$pf-global}--BoxShadow--lg), var(--#{$pf-global}--BoxShadow--lg-bottom);
-  --#{$alert-group}__overflow-button--active--Color: var(--#{$pf-global}--link--Color--hover);
-  --#{$alert-group}__overflow-button--active--BoxShadow: var(--#{$pf-global}--BoxShadow--lg), var(--#{$pf-global}--BoxShadow--lg-bottom);
+  --#{$alert-group}__overflow-button--BorderRadius: var(--pf-t--global--border--radius--medium);
+  --#{$alert-group}__overflow-button--PaddingTop: var(--pf-t--global--spacer--md);
+  --#{$alert-group}__overflow-button--PaddingRight: var(--pf-t--global--spacer--md);
+  --#{$alert-group}__overflow-button--PaddingBottom: var(--pf-t--global--spacer--md);
+  --#{$alert-group}__overflow-button--PaddingLeft: var(--pf-t--global--spacer--md);
+  --#{$alert-group}__overflow-button--Color: var(--pf-t--global--text--color--link--default);
+  --#{$alert-group}__overflow-button--BoxShadow: var(--pf-t--global--box-shadow--lg);
+  --#{$alert-group}__overflow-button--BackgroundColor: var(--pf-t--global--background--color--floating--default);
+  --#{$alert-group}__overflow-button--hover--Color: var(--pf-t--global--text--color--link--hover);
+  --#{$alert-group}__overflow-button--hover--BackgroundColor: var(--pf-t--global--background--color--floating--hover);
+  --#{$alert-group}__overflow-button--hover--BoxShadow: var(--pf-t--global--box-shadow--lg), var(--pf-t--global--box-shadow--lg--bottom);
+  --#{$alert-group}__overflow-button--focus--Color: var(--pf-t--global--text--color--link--hover);
+  --#{$alert-group}__overflow-button--focus--BoxShadow: var(--pf-t--global--box-shadow--lg), var(--pf-t--global--box-shadow--lg--bottom);
+  --#{$alert-group}__overflow-button--active--Color: var(--pf-t--global--text--color--link--hover);
+  --#{$alert-group}__overflow-button--active--BoxShadow: var(--pf-t--global--box-shadow--lg), var(--pf-t--global--box-shadow--lg--bottom);
 
   // Spacing between alerts
   > * + * {
@@ -53,10 +55,12 @@
   color: var(--#{$alert-group}__overflow-button--Color);
   background-color: var(--#{$alert-group}__overflow-button--BackgroundColor);
   border-width: var(--#{$alert-group}__overflow-button--BorderWidth);
+  border-radius: var(--#{$alert-group}__overflow-button--BorderRadius);
   box-shadow: var(--#{$alert-group}__overflow-button--BoxShadow);
 
   &:hover {
     --#{$alert-group}__overflow-button--Color: var(--#{$alert-group}__overflow-button--hover--Color);
+    --#{$alert-group}__overflow-button--BackgroundColor: var(--#{$alert-group}__overflow-button--hover--BackgroundColor);
     --#{$alert-group}__overflow-button--BoxShadow: var(--#{$alert-group}__overflow-button--hover--BoxShadow);
   }
 
