--- a/src/patternfly/components/NotificationBadge/notification-badge.scss
+++ b/src/patternfly/components/NotificationBadge/notification-badge.scss
@@ -8,6 +8,10 @@
   --#{$notification-badge}--PaddingRight: var(--pf-t--global--spacer--sm);
   --#{$notification-badge}--PaddingBottom: var(--pf-t--global--spacer--sm);
   --#{$notification-badge}--PaddingLeft: var(--pf-t--global--spacer--sm);
+  --#{$notification-badge}--MarginTop: calc(-1 * var(--pf-t--global--spacer--sm));
+  --#{$notification-badge}--MarginRight: calc(-1 * var(--pf-t--global--spacer--sm));
+  --#{$notification-badge}--MarginBottom: calc(-1 * var(--pf-t--global--spacer--sm));
+  --#{$notification-badge}--MarginLeft: calc(-1 * var(--pf-t--global--spacer--sm));
 
   // ::before border treatment
   --#{$notification-badge}--before--BorderColor: transparent;
@@ -45,6 +49,10 @@
   padding-block-end: var(--#{$notification-badge}--PaddingBottom);
   padding-inline-start: var(--#{$notification-badge}--PaddingLeft);
   padding-inline-end: var(--#{$notification-badge}--PaddingRight);
+  margin-block-start: var(--#{$notification-badge}--MarginTop);
+  margin-block-end: var(--#{$notification-badge}--MarginBottom);
+  margin-inline-start: var(--#{$notification-badge}--MarginLeft);
+  margin-inline-end: var(--#{$notification-badge}--MarginRight);
   background-color: var(--#{$notification-badge}--BackgroundColor);
   border-radius: var(--#{$notification-badge}--BorderRadius);
 
