--- a/src/patternfly/components/Masthead/masthead-logo.hbs
+++ b/src/patternfly/components/Masthead/masthead-logo.hbs
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<svg height="36px" viewBox="0 0 679 158" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg height="36px" viewBox="0 0 679 158" role="img">
   <title>PF-HorizontalLogo-Color </title>
   <defs>
     <linearGradient x1="68%" y1="2.25860997e-13%" x2="32%" y2="100%" id="linearGradient-1">
