--- a/src/patternfly/components/Masthead/masthead-logo.hbs
+++ b/src/patternfly/components/Masthead/masthead-logo.hbs
@@ -1,5 +1,5 @@
 <svg height="36px" viewBox="0 0 679 158" role="img">
-  <title>PF-HorizontalLogo-Color </title>
+  <title>Patternfly logo</title>
   <defs>
     <linearGradient x1="68%" y1="2.25860997e-13%" x2="32%" y2="100%" id="linearGradient-1">
       <stop stop-color="#2B9AF3" offset="0%"></stop>
