--- a/src/patternfly/components/Menu/menu-item.hbs
+++ b/src/patternfly/components/Menu/menu-item.hbs
@@ -1,5 +1,6 @@
 <{{#if menu-item--IsLink}}a{{else if menu-item--type}}{{menu-item--type}}{{else if menu-list-item--IsCheckbox}}label{{else}}button{{/if}} class="{{pfv}}menu__item{{#if menu-item--modifier}} {{menu-item--modifier}}{{/if}}
-  {{~#if menu-list-item--IsCurrent}} pf-m-current{{/if}}"
+  {{#if menu-item--IsSelected}} pf-m-selected{{/if}}
+  {{#if menu-list-item--IsCurrent}} pf-m-current{{/if}}"
   {{#if menu-list-item--IsCheckbox}}
     for="{{menu--id}}-check-{{menu-list-item--id}}"
   {{else}}
@@ -32,20 +33,39 @@
       aria-expanded="false"
     {{/if}}
   {{/if}}>
-  {{#if menu-list-item--IsCheckbox}}
+  {{#ifAny menu--HasChecks menu-list-item--IsCheckbox}}
     {{#> menu-item-main}}
       {{#> menu-item-check}}
-        {{#> check check--type="span" check--modifier="pf-m-standalone" check--IsDisabled=menu-list-item--IsDisabled}}
-          {{> check-input check-input--attribute=(concat 'id="' menu--id '-check-' menu-list-item--id '" name="' menu--id '-check-' menu-list-item--id '"')}}
+        {{#> check
+          check--id=(concat menu--id '-check-' menu-list-item--id)
+          check--IsStandalone=true
+          check--IsDisabled=menu-list-item--IsDisabled
+          check-input--IsChecked=(ternary menu-item--IsChecked true menu-list-item--IsChecked)}}
         {{/check}}
       {{/menu-item-check}}
       {{#> menu-item-text}}
         {{{menu-item--text}}}
       {{/menu-item-text}}
     {{/menu-item-main}}
-  {{else}}
-    {{#if @partial-block}}
+  {{else ifAny menu-item--IsSelected menu--HasChecks}}
+    {{#> menu-item-main}}
+      {{#> menu-item-text}}
+        {{{menu-item--text}}}
+      {{/menu-item-text}}
+      {{#if menu-item--IsSelected}}
+        {{> menu-item-select-icon}}
+      {{/if}}
+      {{#if menu--HasChecks}}
+        {{> check check--IsChecked=menu-item--IsChecked}}
+      {{/if}}
+    {{/menu-item-main}}
+  {{else ifAny menu-item--text @partial-block}}
+    {{#if menu-item--text}}
+      {{#> menu-item-text}}
+        {{{menu-item--text}}}
+      {{/menu-item-text}}
+    {{else if @partial-block}}
       {{> @partial-block}}
     {{/if}}
-  {{/if}}
+  {{/ifAny}}
 </{{#if menu-item--IsLink}}a{{else if menu-item--type}}{{menu-item--type}}{{else if menu-list-item--IsCheckbox}}label{{else}}button{{/if}}>
