--- a/src/patternfly/demos/Page/page-demo-expandable-nav.hbs
+++ b/src/patternfly/demos/Page/page-demo-expandable-nav.hbs
@@ -103,11 +103,13 @@
     {{/nav}}
   {{/page-sidebar}}
   {{#> page-main page-main--attribute=(concat 'id="main-content-' page--id '"')}}
-    {{#> page-template-breadcrumb}}
-    {{/page-template-breadcrumb}}
-    {{#> page-template-title}}
-    {{/page-template-title}}
-    {{#> page-template-gallery}}
-    {{/page-template-gallery}}
+    {{#> page-main-list}}
+      {{#> page-template-breadcrumb}}
+      {{/page-template-breadcrumb}}
+      {{#> page-template-title}}
+      {{/page-template-title}}
+      {{#> page-template-gallery}}
+      {{/page-template-gallery}}
+    {{/page-main-list}}
   {{/page-main}}
 {{/page}}
