--- a/src/patternfly/demos/Page/page-demo-sticky-top-horizontal-subnav.hbs
+++ b/src/patternfly/demos/Page/page-demo-sticky-top-horizontal-subnav.hbs
@@ -3,8 +3,10 @@
   {{> page-template-sidebar}}
   {{#> page-main page-main--attribute=(concat 'id="main-content-' page--id '"')}}
     {{> page-template-horizontal-subnav page-template-horizontal-subnav--modifier="pf-m-sticky-top"}}
-    {{> page-template-breadcrumb}}
-    {{> page-template-title}}
-    {{> page-template-gallery page-template-gallery--IsLongGallery="true"}}
+    {{#> page-main-list}}
+      {{> page-template-breadcrumb}}
+      {{> page-template-title}}
+      {{> page-template-gallery page-template-gallery--IsLongGallery="true"}}
+    {{/page-main-list}}
   {{/page-main}}
 {{/page}}
