--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -57,18 +57,19 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__header-tools-item--Display: block;
 
   // Header tools notification badge
-  --#{$page}__header-tools-item--c-notification-badge--hover--BackgroundColor: var(--#{$pf-global}--BackgroundColor--dark-200);
-  --#{$page}__header-tools--c-button--notification-badge--m-unread--after--BackgroundColor: var(--#{$pf-global}--primary-color--200);
-  --#{$page}__header-tools--c-button--notification-badge--m-attention--after--BackgroundColor: var(--#{$pf-global}--danger-color--200);
-  --#{$page}__header-tools--c-button--m-selected--notification-badge--m-unread--after--BackgroundColor: var(--#{$pf-global}--primary-color--200);
-  --#{$page}__header-tools--c-button--m-selected--notification-badge--m-attention--after--BackgroundColor: var(--#{$pf-global}--danger-color--200);
+  // --#{$page}__header-tools-item--c-notification-badge--hover--BackgroundColor: var(--#{$pf-global}--BackgroundColor--dark-200);
+  // --#{$page}__header-tools--c-button--notification-badge--m-unread--after--BackgroundColor: var(--#{$pf-global}--primary-color--200);
+  // --#{$page}__header-tools--c-button--notification-badge--m-attention--after--BackgroundColor: var(--#{$pf-global}--danger-color--200);
+  // --#{$page}__header-tools--c-button--m-selected--notification-badge--m-unread--after--BackgroundColor: var(--#{$pf-global}--primary-color--200);
+  // --#{$page}__header-tools--c-button--m-selected--notification-badge--m-attention--after--BackgroundColor: var(--#{$pf-global}--danger-color--200);
 
   // Header tools group button
   --#{$page}__header-tools--c-button--m-selected--before--Width: auto;
   --#{$page}__header-tools--c-button--m-selected--before--Height: auto;
-  --#{$page}__header-tools--c-button--m-selected--before--BackgroundColor: var(--#{$pf-global}--BackgroundColor--dark-200);
-  --#{$page}__header-tools--c-button--m-selected--before--BorderRadius: var(--#{$pf-global}--BorderRadius--sm); // remove at breaking change
-  --#{$page}__header-tools--c-button--m-selected--c-notification-badge--m-unread--after--BorderColor: transparent; // remove at breaking change
+
+  // --#{$page}__header-tools--c-button--m-selected--before--BackgroundColor: var(--#{$pf-global}--BackgroundColor--dark-200);
+  // --#{$page}__header-tools--c-button--m-selected--before--BorderRadius: var(--#{$pf-global}--BorderRadius--sm); // TODO remove at breaking change
+  // --#{$page}__header-tools--c-button--m-selected--c-notification-badge--m-unread--after--BorderColor: transparent; // TODO remove at breaking change
 
   @media screen and (min-width: $pf-v5-global--breakpoint--xl) {
     --#{$page}__header-tools--MarginRight: var(--#{$page}__header-tools--xl--MarginRight);
@@ -78,9 +79,10 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__sidebar--ZIndex: var(--#{$pf-global}--ZIndex--sm);
   --#{$page}__sidebar--Width: #{pf-size-prem(290px)};
   --#{$page}__sidebar--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
-  --#{$page}__sidebar--m-light--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
-  --#{$page}__sidebar--m-light--BorderRightWidth: var(--#{$pf-global}--BorderWidth--sm);
-  --#{$page}__sidebar--m-light--BorderRightColor: var(--#{$pf-global}--BorderColor--100);
+
+  // --#{$page}__sidebar--m-light--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
+  // --#{$page}__sidebar--m-light--BorderRightWidth: var(--#{$pf-global}--BorderWidth--sm);
+  // --#{$page}__sidebar--m-light--BorderRightColor: var(--#{$pf-global}--BorderColor--100);
   --#{$page}__sidebar--BoxShadow: none;
   --#{$page}__sidebar--Transition: var(--#{$pf-global}--Transition);
   --#{$page}__sidebar--TranslateX: -100%;
@@ -103,9 +105,10 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__sidebar-body--PaddingLeft: 0;
   --#{$page}__sidebar-body--m-page-insets--PaddingRight: var(--#{$page}--inset);
   --#{$page}__sidebar-body--m-page-insets--PaddingLeft: var(--#{$page}--inset);
-  --#{$page}__sidebar-body--m-menu--BorderTopColor: var(--#{$pf-global}--BackgroundColor--dark-200);
-  --#{$page}__sidebar-body--m-menu--BorderTopWidth: var(--#{$pf-global}--BorderWidth--sm);
-  --#{$page}__sidebar-body--m-menu--c-context-selector--BorderBottomColor: var(--#{$pf-global}--BackgroundColor--dark-200);
+  --#{$page}__sidebar-body--m-menu--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
+  --#{$page}__sidebar-body--m-menu--BorderTopColor: var(--pf-t--global--border--color--default);
+  --#{$page}__sidebar-body--m-menu--BorderTopWidth: var(--pf-t--global--border--width--button--default);
+  --#{$page}__sidebar-body--m-menu--c-context-selector--BorderBottomColor: var(--pf-t--global--border--color--default);
 
   @media screen and (min-width: $pf-v5-global--breakpoint--xl) {
     --#{$page}__sidebar--TranslateX: var(--#{$page}__sidebar--xl--TranslateX);
@@ -121,11 +124,11 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__main-section--PaddingBottom: 0;
   --#{$page}__main-section--PaddingLeft: var(--pf-t--global--spacer--lg);
   --#{$page}__main-breadcrumb--main-section--PaddingTop: var(--pf-t--global--spacer--md);
-  --#{$page}__main-section--BackgroundColor: transparent;
-  --#{$page}__main-section--m-light--BackgroundColor: transparent;
-  --#{$page}__main-section--m-light-100--BackgroundColor: transparent;
-  --#{$page}__main-section--m-dark-100--BackgroundColor: transparent;
-  --#{$page}__main-section--m-dark-200--BackgroundColor: transparent;
+  --#{$page}__main-section--BackgroundColor: var(--pf-t--global--background--color--primary--default); // transparent;
+  --#{$page}__main-section--m-secondary--BackgroundColor: var(--pf-t--global--background--color--secondary--default); // TODO or is this transparent;
+  // --#{$page}__main-section--m-light-100--BackgroundColor: purple; // transparent;
+  // --#{$page}__main-section--m-dark-100--BackgroundColor: green; // transparent;
+  // --#{$page}__main-section--m-dark-200--BackgroundColor: cyan; // transparent;
   --#{$page}__main-breadcrumb--page__main-tabs--PaddingTop: var(--pf-t--global--spacer--md);
   --#{$page}__main-nav--page__main-tabs--PaddingTop: var(--pf-t--global--spacer--md);
 
@@ -134,52 +137,54 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
   // Sticky
   --#{$page}--section--m-sticky-top--ZIndex: var(--#{$pf-global}--ZIndex--md);
-  --#{$page}--section--m-sticky-top--BoxShadow: var(--#{$pf-global}--BoxShadow--sm-bottom);
+  --#{$page}--section--m-sticky-top--BoxShadow: var(--pf-t--global--box-shadow--sm--bottom);
   --#{$page}--section--m-sticky-bottom--ZIndex: var(--#{$pf-global}--ZIndex--md);
-  --#{$page}--section--m-sticky-bottom--BoxShadow: var(--#{$pf-global}--BoxShadow--sm-top);
+  --#{$page}--section--m-sticky-bottom--BoxShadow: var(--pf-t--global--box-shadow--sm-top);
 
   // Shadows
-  --#{$page}--section--m-shadow-bottom--BoxShadow: var(--#{$pf-global}--BoxShadow--sm-bottom);
+  --#{$page}--section--m-shadow-bottom--BoxShadow: var(--pf-t--global--box-shadow--sm-bottom);
   --#{$page}--section--m-shadow-bottom--ZIndex: var(--#{$pf-global}--ZIndex--xs);
-  --#{$page}--section--m-shadow-top--BoxShadow: var(--#{$pf-global}--BoxShadow--sm-top);
+  --#{$page}--section--m-shadow-top--BoxShadow: var(--pf-t--global--box-shadow--sm-top);
   --#{$page}--section--m-shadow-top--ZIndex: var(--#{$pf-global}--ZIndex--xs);
 
   // Main section horizontal nav
-  --#{$page}__main-nav--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
-  --#{$page}__main-nav--PaddingTop: var(--#{$pf-global}--spacer--md);
+  --#{$page}__main-nav--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
+  --#{$page}__main-nav--PaddingTop: var(--pf-t--global--spacer--md);
   --#{$page}__main-nav--PaddingRight: 0;
   --#{$page}__main-nav--PaddingLeft: 0;
-  --#{$page}__main-nav--m-sticky-top--PaddingBottom: var(--#{$pf-global}--spacer--md);
-  --#{$page}__main-nav--xl--PaddingRight: var(--#{$pf-global}--spacer--sm);
-  --#{$page}__main-nav--xl--PaddingLeft: var(--#{$pf-global}--spacer--sm);
+  --#{$page}__main-nav--m-sticky-top--PaddingBottom: var(--pf-t--global--spacer--md);
+  --#{$page}__main-nav--xl--PaddingRight: var(--pf-t--global--spacer--sm);
+  --#{$page}__main-nav--xl--PaddingLeft: var(--pf-t--global--spacer--sm);
 
   // Main section horizontal subnav
-  --#{$page}__main-subnav--BackgroundColor: var(--#{$pf-global}--BackgroundColor--dark-300);
-  --#{$page}__main-subnav--BorderTopWidth: var(--#{$pf-global}--BorderWidth--sm);
-  --#{$page}__main-subnav--BorderTopColor: var(--#{$pf-global}--palette--black-800);
+  --#{$page}__main-subnav--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
+  --#{$page}__main-subnav--BorderTopWidth: var(--pf-t--global--border--width--divider--default);
+  --#{$page}__main-subnav--BorderTopColor: var(--pf-t--global--border--color--default);
   --#{$page}__main-subnav--BorderLeftWidth: 0;
-  --#{$page}__main-subnav--BorderLeftColor: var(--#{$pf-global}--palette--black-800);
-  --#{$page}__sidebar--main__main-subnav--BorderLeftWidth: var(--#{$pf-global}--BorderWidth--sm);
+  --#{$page}__main-subnav--BorderLeftColor: var(--pf-t--global--border--color--default);
+  --#{$page}__sidebar--main__main-subnav--BorderLeftWidth: var(--pf-t--global--border--width--divider--default);
   --#{$page}__sidebar--m-collapsed--main__main-subnav--BorderLeftWidth: 0;
 
 
   // Main section breadcrumb
-  --#{$page}__main-breadcrumb--PaddingTop: var(--pf-t--global--spacer--md);
-  --#{$page}__main-breadcrumb--PaddingRight: var(--pf-t--global--spacer--md);
+  --#{$page}__main-breadcrumb--PaddingTop: var(--pf-t--global--spacer--lg);
+  --#{$page}__main-breadcrumb--PaddingRight: var(--pf-t--global--spacer--lg);
   --#{$page}__main-breadcrumb--PaddingBottom: 0;
   --#{$page}__main-breadcrumb--PaddingLeft: var(--pf-t--global--spacer--lg);
+  --#{$page}__main-breadcrumb--BackgroundColor: var(--pf-t--global--background--color--primary--default);
 
   // Main section tabs
   --#{$page}__main-tabs--PaddingTop: 0;
   --#{$page}__main-tabs--PaddingRight: 0;
   --#{$page}__main-tabs--PaddingBottom: 0;
-  --#{$page}__main-tabs--PaddingLeft: 0;
+  --#{$page}__main-tabs--BackgroundColor: var(--pf-t--global--background--color--primary--default);
 
   // Wizard main section
-  --#{$page}__main-wizard--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
-  --#{$page}__main-wizard--BorderTopColor: var(--#{$pf-global}--BorderColor--100);
-  --#{$page}__main-wizard--BorderTopWidth: var(--#{$pf-global}--BorderWidth--sm);
-  --#{$page}__main-wizard--m-light-200--BackgroundColor: var(--#{$pf-global}--BackgroundColor--200);
+  --#{$page}__main-wizard--BackgroundColor: var(--pf-t--global--background--color--primary--default);
+  --#{$page}__main-wizard--BorderTopColor: var(--pf-t--global--border--color--default);
+  --#{$page}__main-wizard--BorderTopWidth: var(--pf-t--global--border--width--button--default);
+  
+  // --#{$page}__main-wizard--m-light-200--BackgroundColor: var(--#{$pf-global}--BackgroundColor--200);
 }
 
 .#{$page} {
@@ -319,59 +324,52 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
 .#{$page}__header-tools-item {
   @include pf-v5-hidden-visible(var(--#{$page}__header-tools-item--Display));
-
-  .#{$notification-badge} {
-    &.pf-m-read {
-      &:hover {
-        --#{$notification-badge}--after--BackgroundColor: var(--#{$page}__header-tools-item--c-notification-badge--hover--BackgroundColor);
-      }
-    }
-  }
-
-  &.pf-m-selected {
-    .#{$button} {
-      background-color: var(--#{$page}__header-tools--c-button--m-selected--before--BackgroundColor); // update at breaking change
-      border-radius: var(--#{$page}__header-tools--c-button--m-selected--before--BorderRadius); // update at breaking change
-
-      // remove at breaking change
-      &::before {
-        position: absolute;
-        inset: 0;
-        width: var(--#{$page}__header-tools--c-button--m-selected--before--Width); // remove at breaking change
-        height: var(--#{$page}__header-tools--c-button--m-selected--before--Height); // remove at breaking change
-        content: "";
-      }
-
-      // stylelint-disable
-      .#{$notification-badge} {
-        &.pf-m-unread {
-          --#{$notification-badge}--after--BackgroundColor: var(--#{$page}__header-tools--c-button--m-selected--notification-badge--m-unread--after--BackgroundColor);
-
-          &::after {
-            border-color: var(--#{$page}__header-tools--c-button--m-selected--c-notification-badge--m-unread--after--BorderColor);
-          }
-        }
-
-        &.pf-m-attention {
-          --#{$notification-badge}--after--BackgroundColor: var(--#{$pf-global}--danger-color--200);
-        }
-      }
-      // stylelint-enable
-    }
-  }
-
-  .#{$button}:focus {
-    .#{$notification-badge} {
-      &.pf-m-unread {
-        --#{$notification-badge}--after--BackgroundColor: var(--#{$page}__header-tools--c-button--notification-badge--m-unread--after--BackgroundColor);
-      }
-
-      &.pf-m-attention {
-        --#{$notification-badge}--after--BackgroundColor: var(--#{$page}__header-tools--c-button--notification-badge--m-attention--after--BackgroundColor);
-      }
-    }
-  }
 }
+
+  // &.pf-m-selected {
+  //   .#{$button} {
+  //     background-color: var(--#{$page}__header-tools--c-button--m-selected--before--BackgroundColor); // update at breaking change
+  //     border-radius: var(--#{$page}__header-tools--c-button--m-selected--before--BorderRadius); // update at breaking change
+
+  //     // remove at breaking change
+  //     // &::before {
+  //     //   position: absolute;
+  //     //   inset: 0;
+  //     //   width: var(--#{$page}__header-tools--c-button--m-selected--before--Width); // remove at breaking change
+  //     //   height: var(--#{$page}__header-tools--c-button--m-selected--before--Height); // remove at breaking change
+  //     //   content: "";
+  //     // }
+
+  //     // // stylelint-disable
+  //     // .#{$notification-badge} {
+  //     //   &.pf-m-unread {
+  //     //     --#{$notification-badge}--after--BackgroundColor: var(--#{$page}__header-tools--c-button--m-selected--notification-badge--m-unread--after--BackgroundColor);
+
+  //     //     &::after {
+  //     //       border-color: var(--#{$page}__header-tools--c-button--m-selected--c-notification-badge--m-unread--after--BorderColor);
+  //     //     }
+  //     //   }
+
+  //     //   &.pf-m-attention {
+  //     //     --#{$notification-badge}--after--BackgroundColor: var(--#{$pf-global}--danger-color--200);
+  //     //   }
+  //     // }
+  //     // // stylelint-enable
+  //   }
+  // }
+
+  // .#{$button}:focus {
+  //   .#{$notification-badge} {
+  //     &.pf-m-unread {
+  //       --#{$notification-badge}--after--BackgroundColor: var(--#{$page}__header-tools--c-button--notification-badge--m-unread--after--BackgroundColor);
+  //     }
+
+  //     &.pf-m-attention {
+  //       --#{$notification-badge}--after--BackgroundColor: var(--#{$page}__header-tools--c-button--notification-badge--m-attention--after--BackgroundColor);
+  //     }
+  //   }
+  // }
+// }
 
 // Sidebar
 .#{$page}__sidebar {
@@ -417,13 +415,13 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
     overflow: hidden;
   }
 
-  &.pf-m-light {
-    @include pf-v5-t-light;
+  // &.pf-m-light {
+  //   @include pf-v5-t-light;
 
-    --#{$page}__sidebar--BackgroundColor: var(--#{$page}__sidebar--m-light--BackgroundColor);
+  //   --#{$page}__sidebar--BackgroundColor: var(--#{$page}__sidebar--m-light--BackgroundColor);
 
-    border-inline-end: var(--#{$page}__sidebar--m-light--BorderRightWidth) solid var(--#{$page}__sidebar--m-light--BorderRightColor);
-  }
+  //   border-inline-end: var(--#{$page}__sidebar--m-light--BorderRightWidth) solid var(--#{$page}__sidebar--m-light--BorderRightColor);
+  // }
 }
 
 .#{$page}__sidebar-header {
@@ -448,7 +446,7 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   }
 
   &.pf-m-menu {
-    background-color: var(--#{$pf-global}--palette--black-900);
+    background-color: var(--#{$page}__sidebar-body--m-menu--BackgroundColor);
     border-block-start: var(--#{$page}__sidebar-body--m-menu--BorderTopWidth) solid var(--#{$page}__sidebar-body--m-menu--BorderTopColor);
 
     & + & {
@@ -568,9 +566,11 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 }
 
 .#{$page}__main-list {
+  padding-block-start: var(--pf-t--global--spacer--lg);
   padding-block-end: var(--pf-t--global--spacer--lg);
   margin-block-end: var(--pf-t--global--spacer--lg);
   background-color: var(--pf-t--global--background--color--primary--default);
+  border: 8px solid var(--pf-t--color--white); // TODO experimenting with rounded border
   border-radius: var(--pf-t--global--border--radius--large);
 }
 
@@ -693,25 +693,21 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   padding-inline-end: var(--#{$page}__main-section--PaddingRight);
   background-color: var(--#{$page}__main-section--BackgroundColor);
 
-  &.pf-m-light {
-    --#{$page}__main-section--BackgroundColor: var(--#{$page}__main-section--m-light--BackgroundColor);
+  &.pf-m-secondary {
+    --#{$page}__main-section--BackgroundColor: var(--#{$page}__main-section--m-secondary--BackgroundColor);
   }
 
-  &.pf-m-light-100 {
-    --#{$page}__main-section--BackgroundColor: var(--#{$page}__main-section--m-light-100--BackgroundColor);
-  }
+  // &.pf-m-light-100 {
+  //   --#{$page}__main-section--BackgroundColor: var(--#{$page}__main-section--m-light-100--BackgroundColor);
+  // }
 
-  &[class*="pf-m-dark-"] {
-    @include pf-v5-t-dark; // force the container to follow the dark theme
-  }
+  // &.pf-m-dark-100 {
+  //   --#{$page}__main-section--BackgroundColor: var(--#{$page}__main-section--m-dark-100--BackgroundColor);
+  // }
 
-  &.pf-m-dark-100 {
-    --#{$page}__main-section--BackgroundColor: var(--#{$page}__main-section--m-dark-100--BackgroundColor);
-  }
-
-  &.pf-m-dark-200 {
-    --#{$page}__main-section--BackgroundColor: var(--#{$page}__main-section--m-dark-200--BackgroundColor);
-  }
+  // &.pf-m-dark-200 {
+  //   --#{$page}__main-section--BackgroundColor: var(--#{$page}__main-section--m-dark-200--BackgroundColor);
+  // }
 
   @each $breakpoint, $breakpoint-value in $pf-page-v5--breakpoint-map {
     $breakpoint-name: if($breakpoint != "base", -on-#{$breakpoint}, "");
@@ -757,9 +753,9 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
     --#{$page}__main-wizard--BorderTopWidth: 0;
   }
 
-  &.pf-m-light-200 {
-    --#{$page}__main-wizard--BackgroundColor: var(--#{$page}__main-wizard--m-light-200--BackgroundColor);
-  }
+  // &.pf-m-light-200 {
+  //   --#{$page}__main-wizard--BackgroundColor: var(--#{$page}__main-wizard--m-light-200--BackgroundColor);
+  // }
 }
 
 .#{$page}__main-wizard .#{$page}__main-body {
@@ -807,9 +803,3 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   }
 }
 
-// stylelint-disable no-invalid-position-at-import-rule
-@import "themes/dark/page";
-
-@include pf-v5-theme-dark {
-  @include pf-v5-theme-dark-page;
-}
