--- a/src/patternfly/demos/Page/page-demo-overflow-scroll.hbs
+++ b/src/patternfly/demos/Page/page-demo-overflow-scroll.hbs
@@ -3,9 +3,11 @@
   {{> page-template-sidebar}}
   {{#> page-main page-main--attribute=(concat 'id="main-content-' page--id '"')}}
     {{> page-template-horizontal-subnav}}
-    {{> page-template-breadcrumb}}
-    {{> page-template-title page-template-title--modifier="pf-m-shadow-bottom"}}
-    {{> page-template-gallery page-template-gallery--IsLongGallery="true" page-template-gallery--modifier="pf-m-overflow-scroll"}}
-    {{> page-template-footer page-template-footer--modifier="pf-m-shadow-top"}}
+    {{#> page-main-list}}
+      {{> page-template-breadcrumb}}
+      {{> page-template-title page-template-title--modifier="pf-m-shadow-bottom"}}
+      {{> page-template-gallery page-template-gallery--IsLongGallery="true" page-template-gallery--modifier="pf-m-overflow-scroll"}}
+      {{> page-template-footer page-template-footer--modifier="pf-m-shadow-top"}}
+    {{/page-main-list}}
   {{/page-main}}
 {{/page}}
