--- a/src/patternfly/demos/Page/page-demo-sticky-section-bottom.hbs
+++ b/src/patternfly/demos/Page/page-demo-sticky-section-bottom.hbs
@@ -2,10 +2,12 @@
   {{> page-template-header}}
   {{> page-template-sidebar}}
   {{#> page-main page-main--attribute=(concat 'id="main-content-' page--id '"')}}
-    {{> page-template-horizontal-subnav}}
-    {{> page-template-breadcrumb}}
-    {{> page-template-title}}
-    {{> page-template-gallery page-template-gallery--IsLongGallery="true"}}
-    {{> page-template-footer page-template-footer--modifier="pf-m-sticky-bottom"}}
+    {{#> page-main-list}}
+      {{> page-template-horizontal-subnav}}
+      {{> page-template-breadcrumb}}
+      {{> page-template-title}}
+      {{> page-template-gallery page-template-gallery--IsLongGallery="true"}}
+      {{> page-template-footer page-template-footer--modifier="pf-m-sticky-bottom"}}
+    {{/page-main-list}}
   {{/page-main}}
 {{/page}}
