--- a/src/patternfly/demos/Page/page-demo-sticky-top-section-group.hbs
+++ b/src/patternfly/demos/Page/page-demo-sticky-top-section-group.hbs
@@ -2,11 +2,13 @@
   {{> page-template-header}}
   {{> page-template-sidebar}}
   {{#> page-main page-main--attribute=(concat 'id="main-content-' page--id '"')}}
-    {{#> page-main-group page-main-group--modifier="pf-m-sticky-top"}}
-      {{> page-template-horizontal-subnav}}
-      {{> page-template-breadcrumb}}
-      {{> page-template-title}}
-    {{/page-main-group}}
-    {{> page-template-gallery page-template-gallery--IsLongGallery="true"}}
+    {{#> page-main-list}}
+      {{#> page-main-group page-main-group--modifier="pf-m-sticky-top"}}
+        {{> page-template-horizontal-subnav}}
+        {{> page-template-breadcrumb}}
+        {{> page-template-title}}
+      {{/page-main-group}}
+      {{> page-template-gallery page-template-gallery--IsLongGallery="true"}}
+    {{/page-main-list}}
   {{/page-main}}
 {{/page}}
