--- a/src/patternfly/components/ResizeObserver/resize-observer.hbs
+++ b/src/patternfly/components/ResizeObserver/resize-observer.hbs
@@ -17,8 +17,11 @@
   {{#if resize-observer--data-size-custom}}
     data-size-custom="{{{resize-observer--data-size-custom}}}"
   {{/if}}
-  data-on-sm="inline, blue"
-  data-on-md="stack,red"
+  data-on-xs="stacked, alpha"
+  data-on-sm="inlined, beta"
+  data-on-md="reversed, gamma"
+  data-on-lg="intial, delta"
+  data-on-xl="flex, zeta"
   {{#if resize-observer--id}}
     id="{{{resize-observer--id}}}"
   {{/if}}
